# tring_tring

tring_js/: .gitignore  Justfile  Makefile  README.md  biome.json  bun.lockb  index.js  package.json
tring_py/: .gitignore  Justfile  Makefile  README.md  delete.sql  main.py  pyproject.toml
tring_py/scripts/: clean_table.sql
