[project]
name = "turing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.0",
    "nltk>=3.9.1",
    "pandas>=2.2.3",
    "pony>=0.7.19",
    "psycopg2>=2.9.10",
    "pyodbc>=5.2.0",
    "scikit-learn>=1.6.0",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.36",
    "textblob>=0.18.0.post0",
    "vadersentiment>=3.3.2",
]
